--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Chambre d'hôtes "Le Verger"</title>
 
-    <meta name="description" content="">
+    <meta name="description" content="Chambres d\' hôtes en Normandie">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -83,15 +83,15 @@
                 </h2>
 
                 <div id="owl-slider" class="owl-carousel main-slider">
-                    <a class="main-slider-item fresco" href="img/main-slider/1.jpg" data-fresco-caption="LE LIEU DE VIE" data-fresco-group="main-slider-item"><img src="img/main-slider/1.png" alt="" /></a>
-                    <a class="main-slider-item fresco" href="img/main-slider/2.jpg" data-fresco-caption="ESPACE JARDIN" data-fresco-group="main-slider-item"><img src="img/main-slider/2.png" alt="" /></a>
-                    <a class="main-slider-item fresco" href="img/main-slider/3.jpg" data-fresco-caption="ETANG" data-fresco-group="main-slider-item"><img src="img/main-slider/3.png" alt="" /></a>
-                    <a class="main-slider-item fresco" href="img/main-slider/4.jpg" data-fresco-caption="LA SALLE DU PETIT DEJEUNER" data-fresco-group="main-slider-item"><img src="img/main-slider/4.png" alt="" /></a>
-                    <a class="main-slider-item fresco" href="img/main-slider/5.jpg" data-fresco-caption="LA CHAMBRE" data-fresco-group="main-slider-item"><img src="img/main-slider/5.png" alt="" /></a>
-                    <a class="main-slider-item fresco" href="img/main-slider/6.jpg" data-fresco-caption="SALLE DE BAIN DANS LA CHAMBRE" data-fresco-group="main-slider-item"><img src="img/main-slider/6.png" alt="" /></a>
-                    <a class="main-slider-item fresco" href="img/main-slider/7.jpg" data-fresco-caption="CUISINE EN FACE DE LA CHAMBRE" data-fresco-group="main-slider-item"><img src="img/main-slider/7.png" alt="" /></a>
-                    <a class="main-slider-item fresco" href="img/main-slider/8.jpg" data-fresco-caption="LE HAVRE" data-fresco-group="main-slider-item"><img src="img/main-slider/8.png" alt="" /></a>
-                    <a class="main-slider-item fresco" href="img/main-slider/9.jpg" data-fresco-caption="ETRETAT" data-fresco-group="main-slider-item"><img src="img/main-slider/9.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/1.JPG" data-fresco-caption="LE LIEU DE VIE" data-fresco-group="main-slider-item"><img src="img/main-slider/1.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/2.JPG" data-fresco-caption="ESPACE JARDIN" data-fresco-group="main-slider-item"><img src="img/main-slider/2.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/3.JPG" data-fresco-caption="ETANG" data-fresco-group="main-slider-item"><img src="img/main-slider/3.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/4.JPG" data-fresco-caption="LA SALLE DU PETIT DEJEUNER" data-fresco-group="main-slider-item"><img src="img/main-slider/4.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/5.JPG" data-fresco-caption="LA CHAMBRE" data-fresco-group="main-slider-item"><img src="img/main-slider/5.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/6.JPG" data-fresco-caption="SALLE DE BAIN DANS LA CHAMBRE" data-fresco-group="main-slider-item"><img src="img/main-slider/6.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/7.JPG" data-fresco-caption="CUISINE EN FACE DE LA CHAMBRE" data-fresco-group="main-slider-item"><img src="img/main-slider/7.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/8.JPG" data-fresco-caption="LE HAVRE" data-fresco-group="main-slider-item"><img src="img/main-slider/8.png" alt="" /></a>
+                    <a class="main-slider-item fresco" href="img/main-slider/9.JPG" data-fresco-caption="ETRETAT" data-fresco-group="main-slider-item"><img src="img/main-slider/9.png" alt="" /></a>
                 </div>
 
             </div>
